--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
+<html>
 <head>
      <title>Calli's website</title>
 
@@ -8,5 +8,13 @@
 
 <body>
   <h1>Calli's website</h1>
+  <h2>Calli Luna</h2>
+  <p><a href="calli.luna@gmail.com">calli.luna@gmail.com</a></p>
+
+  <p><a href href+"https://twitter.com/calli_luna">Twitter</a></p>
+
+  <img src="IMG_6865.jpg" alt="Self Portrait" width="400" />
 
 </body>
+
+</html>
