--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
   <p><a href href+"https://twitter.com/calli_luna">Twitter</a></p>
 
-  <img src="IMG_6865.jpg" alt="Self Portrait" width="400" />
+  <a href="mailto:calli.luna@gmail.com">
+    <img src="IMG_6865.jpg" alt="Self Portrait" width="400" />
+</a>
 
 </body>
 
