--- a/index.html
+++ b/index.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
      <title>Calli's website</title>
 
 </head>
 
 <body>
+  <!--This is a comment and won't show on the site.-->
   <h1>Calli's website</h1>
   <h2>Calli Luna</h2>
   <p><a href="calli.luna@gmail.com">calli.luna@gmail.com</a></p>
 
-  <p><a href href+"https://twitter.com/calli_luna">Twitter</a></p>
+  <p><a href href+"https://twitter.com/calli_luna"
+  target="_blank">Twitter</a></p>
 
   <a href="mailto:calli.luna@gmail.com">
     <img src="IMG_6865.jpg" alt="Self Portrait" width="400" />
 </a>
+
+<ul>
+  <li><a
+  href="http://www.mutigers.com/schedule.aspx?path=footballMizzou">Mizzou</a></li>
+    <ul>
+      <li>New coach</li>
+      <li>no more Mauk</li>
+    </ul>
+  <li>South Carolina</li>
+  <li>Florida</li>
+</ul>
+
+</ul>
 
 </body>
 
