--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!--This is a comment and won't show on the site.-->
   <h1>Calli's website</h1>
   <h2>Calli Luna</h2>
+  <h3><a href="#football">Football list</a></h3>
   <p><a href="calli.luna@gmail.com">calli.luna@gmail.com</a></p>
 
   <p><a href href+"https://twitter.com/calli_luna"
@@ -21,10 +22,12 @@
     <img src="IMG_6865.jpg" alt="Self Portrait" width="400" />
 </a>
 
+<p><a href="page2.html">This is my second page</a></p>
+
 <ul>
   <li><a
   href="http://www.mutigers.com/schedule.aspx?path=footballMizzou">Mizzou</a></li>
-    <ul>
+    <ul id="football">
       <li>New coach</li>
       <li>no more Mauk</li>
     </ul>
