--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>hello world this is calli. Coming to you live for the J school</h1>
+  <h1>hello world this is calli. Coming to you live from the J school</h1>
 </body>
 
 </html>
