add stuff for the assignment

--- a/index.html
+++ b/index.html
@@ -4,38 +4,32 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-     <title>Calli's website</title>
+     <title>Calli Luna</title>
 
 </head>
 
 <body>
   <!--This is a comment and won't show on the site.-->
-  <h1>Calli's website</h1>
-  <h2>Calli Luna</h2>
-  <h3><a href="#football">Football list</a></h3>
-  <p><a href="calli.luna@gmail.com">calli.luna@gmail.com</a></p>
+  <h1>Calli Luna</h1>
 
-  <p><a href href+"https://twitter.com/calli_luna"
-  target="_blank">Twitter</a></p>
+  <p><a href="mailto:calli.luna@gmail.com">Email</a></p>
+
+  <p><a href="https://twitter.com/calli_luna" target="_blank">Twitter</a></p>
+
+  <p><a href="https://www.instagram.com/curlyswirly/" target="_blank">Instagram</a></p>
 
   <a href="mailto:calli.luna@gmail.com">
     <img src="IMG_6865.jpg" alt="Self Portrait" width="400" />
-</a>
+  </a>
 
-<p><a href="page2.html">This is my second page</a></p>
+
 
 <ul>
-  <li><a
-  href="http://www.mutigers.com/schedule.aspx?path=footballMizzou">Mizzou</a></li>
-    <ul id="football">
-      <li>New coach</li>
-      <li>no more Mauk</li>
-    </ul>
-  <li>South Carolina</li>
-  <li>Florida</li>
+  <li><a href="https://callitraveldiaries.wordpress.com/" target="_blank">Blog</a></li>
+  <li><a href="http://calliluna.com/" target="_blank">Portfolio</a></li>
 </ul>
 
-</ul>
+<p><a href="page2.html">Click here for a joke</a></p>
 
 </body>
 
