--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 <head>
      <title>Calli Luna</title>
+     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+</head>
 
 </head>
 
