--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 <head>
      <title>Calli Luna</title>
      <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
+  <div id="container">
   <!--This is a comment and won't show on the site.-->
   <h1>Calli Luna</h1>
 
