Added some text

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
   <p><a href="https://www.instagram.com/curlyswirly/" target="_blank">Instagram</a></p>
 
+  <p>Hello, my name is Calli. This is a site to learn and little bit about me!</p>
+
   <a href="mailto:calli.luna@gmail.com">
     <img src="IMG_6865.jpg" alt="Self Portrait" width="400" />
   </a>
