--- a/index.html
+++ b/index.html
@@ -14,28 +14,30 @@
   <!--This is a comment and won't show on the site.-->
   <h1>Calli Luna</h1>
 
-  <p><a href="mailto:calli.luna@gmail.com">Email</a></p>
+  <p id="nav"><a href="mailto:calli.luna@gmail.com">Email</a></p>
 
-  <p><a href="https://twitter.com/calli_luna" target="_blank">Twitter</a></p>
+  <p id="nav"><a href="https://twitter.com/calli_luna" target="_blank">Twitter</a></p>
 
-  <p><a href="https://www.instagram.com/curlyswirly/" target="_blank">Instagram</a></p>
+  <p id="nav"><a href="https://www.instagram.com/curlyswirly/" target="_blank">Instagram</a></p>
 
   <p>Hello, my name is Calli. This is a site to learn and little bit about me!</p>
 
+<a href="#">
   <a href="mailto:calli.luna@gmail.com">
     <img src="IMG_6865.jpg" alt="Self Portrait" width="400" />
   </a>
+</a>
 
 
 
-<ul>
+<ul id="nav">
   <li><a href="https://callitraveldiaries.wordpress.com/" target="_blank">Blog</a></li>
   <li><a href="http://calliluna.com/" target="_blank">Portfolio</a></li>
 </ul>
 
-<p><a href="page2.html">Click here for a joke</a></p>
+<p id="nav"><a href="page2.html">Click here for a joke</a></p>
 
-<p><a href="oldindex.html">Unstyled site here</a></p>
+<p id="nav"><a href="oldindex.html">Unstyled site here</a></p>
 
 </body>
 
