--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
   <!--This is a comment and won't show on the site.-->
   <h1>Calli Luna</h1>
 
-  <p id="nav"><a href="mailto:calli.luna@gmail.com">Email</a></p>
-
-  <p id="nav"><a href="https://twitter.com/calli_luna" target="_blank">Twitter</a></p>
-
-  <p id="nav"><a href="https://www.instagram.com/curlyswirly/" target="_blank">Instagram</a></p>
+  <ul id="nav">
+    <li><a href="https://callitraveldiaries.wordpress.com/" target="_blank">Blog</a></li>
+    <li><a href="http://calliluna.com/" target="_blank">Portfolio</a></li>
+    <li><a href="mailto:calli.luna@gmail.com">Email</a></li>
+    <li><a href="https://twitter.com/calli_luna" target="_blank">Twitter</a></li>
+    <li><a href="https://www.instagram.com/curlyswirly/" target="_blank">Instagram</a></li>
+  </ul>
 
   <p>Hello, my name is Calli. This is a site to learn and little bit about me!</p>
 
@@ -27,12 +29,6 @@
     <img src="IMG_6865.jpg" alt="Self Portrait" width="400" />
   </a>
 </a>
-
-
-<ul id="nav">
-  <li><a href="https://callitraveldiaries.wordpress.com/" target="_blank">Blog</a></li>
-  <li><a href="http://calliluna.com/" target="_blank">Portfolio</a></li>
-</ul>
 
 <p id="nav"><a href="page2.html">Click here for a joke</a></p>
 
