added div ending

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <p>Hello, my name is Calli. This is a site to learn and little bit about me!</p>
 
 <a href="#">
-  <a href="mailto:calli.luna@gmail.com">
+  <a href="mailto:calli.luna@gmail.com"
     <img src="IMG_6865.jpg" alt="Self Portrait" width="400" />
   </a>
 </a>
@@ -33,6 +33,8 @@
 <p id="nav"><a href="page2.html">Click here for a joke</a></p>
 
 <p id="nav"><a href="oldindex.html">Unstyled site here</a></p>
+
+</div>
 
 </body>
 
