--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   </a>
 </a>
 
-<p id="nav"><a href="page2.html">Click here for a joke</a></p>
+<p><a href="page2.html">Click here for a joke</a></p>
 
-<p id="nav"><a href="oldindex.html">Unstyled site here</a></p>
+<p><a href="oldindex.html">Unstyled site here</a></p>
 
 </div>
 
