--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
      <title>Calli Luna</title>
      <meta http-equiv="content-type" content="text/html;charset=utf-8" />
      <link rel="stylesheet" type="text/css" href="style.css" />
+     <link href="https://fonts.googleapis.com/css?family=BioRhyme:400,700|Lato:300i,400" rel="stylesheet"> 
 </head>
 
 <body>
