--- a/index.html
+++ b/index.html
@@ -7,31 +7,31 @@
      <title>Calli Luna</title>
      <meta http-equiv="content-type" content="text/html;charset=utf-8" />
      <link rel="stylesheet" type="text/css" href="style.css" />
-     <link href="https://fonts.googleapis.com/css?family=BioRhyme|Lato|Montserrat" rel="stylesheet"/> 
+     <link href="https://fonts.googleapis.com/css?family=BioRhyme|Lato|Montserrat" rel="stylesheet"/>
 </head>
 
 <body>
-  <div id="container">
-  <!--This is a comment and won't show on the site.-->
-  <h1>Calli Luna</h1>
+    <nav>
+      <ul class="navigation">
+        <li><a href="https://callitraveldiaries.wordpress.com/" target="_blank">Blog</a></li>
+        <li><a href="http://calliluna.com/" target="_blank">Portfolio</a></li>
+        <li><a href="mailto:calli.luna@gmail.com">Email</a></li>
+        <li><a href="https://twitter.com/calli_luna" target="_blank">Twitter</a></li>
+        <li><a href="https://www.instagram.com/curlyswirly/" target="_blank">Instagram</a></li>
+      </ul>
+    </nav>
+  	<div class="wrapper">
+    <header class="header">Calli Luna</header>
+      <article class="main">
+        <a href="mailto:calli.luna@gmail.com">
+            <img src="IMG_6865.jpg" alt="Self Portrait" width="400" />
+        </a>
+        <p>Hello, my name is Calli. This is a site to learn and little bit about me!</p>
+      </article>
+      <aside class="aside aside-1">Aside 1</aside>
+      <aside class="aside aside-2">Aside 2</aside>
+      <footer class="footer">Footer</footer>
 
-  <ul id="nav">
-    <li><a href="https://callitraveldiaries.wordpress.com/" target="_blank">Blog</a></li>
-    <li><a href="http://calliluna.com/" target="_blank">Portfolio</a></li>
-    <li><a href="mailto:calli.luna@gmail.com">Email</a></li>
-    <li><a href="https://twitter.com/calli_luna" target="_blank">Twitter</a></li>
-    <li><a href="https://www.instagram.com/curlyswirly/" target="_blank">Instagram</a></li>
-  </ul>
-
-  <p>Hello, my name is Calli. This is a site to learn and little bit about me!</p>
-
-<a href="mailto:calli.luna@gmail.com">
-    <img src="IMG_6865.jpg" alt="Self Portrait" width="400" />
-</a>
-
-<p><a href="page2.html">Click here for a joke</a></p>
-
-<p><a href="oldindex.html">Unstyled site here</a></p>
 
 </div>
 
