--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </a>
         <p>Hello, my name is Calli. This is a site to learn and little bit about me!</p>
       </article>
-      <aside class="aside aside-1">Aside 1</aside>
-      <aside class="aside aside-2">Aside 2</aside>
-      <footer class="footer">Footer</footer>
+      <aside class="aside aside-1">Video</aside>
+      <aside class="aside aside-2">Photos</aside>
+      <footer class="footer">End</footer>
 
 
 </div>
