--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </a>
         <p>Hello, my name is Calli. This is a site to learn and little bit about me!</p>
       </article>
-      <aside class="aside aside-1">Video</aside>
+      <aside class="aside aside-1">Videos</aside>
       <aside class="aside aside-2">Photos</aside>
       <footer class="footer">End</footer>
 
