--- a/index.html
+++ b/index.html
@@ -11,30 +11,39 @@
 </head>
 
 <body>
-    <nav>
-      <ul class="navigation">
-        <li><a href="https://callitraveldiaries.wordpress.com/" target="_blank">Blog</a></li>
-        <li><a href="http://calliluna.com/" target="_blank">Portfolio</a></li>
-        <li><a href="mailto:calli.luna@gmail.com">Email</a></li>
-        <li><a href="https://twitter.com/calli_luna" target="_blank">Twitter</a></li>
-        <li><a href="https://www.instagram.com/curlyswirly/" target="_blank">Instagram</a></li>
-      </ul>
-    </nav>
-  	<div class="wrapper">
-    <header class="header">Calli Luna</header>
-      <article class="main">
-        <a href="mailto:calli.luna@gmail.com">
-            <img src="IMG_6865.jpg" alt="Self Portrait" width="400" />
-        </a>
-        <p>Hello, my name is Calli. This is a site to learn and little bit about me!</p>
-      </article>
-      <aside class="aside aside-1">Videos</aside>
-      <aside class="aside aside-2">Photos</aside>
-      <footer class="footer">End</footer>
-
-
+  <div class="head">
+  <header>
+    <h1>Calli Luna</h1>
+  </header>
+  <nav>
+    <ul class="nav">
+      <li><a href="https://callitraveldiaries.wordpress.com/" target="_blank">Blog</a></li>
+      <li><a href="http://calliluna.com/" target="_blank">Portfolio</a></li>
+      <li><a href="mailto:calli.luna@gmail.com">Email</a></li>
+      <li><a href="https://twitter.com/calli_luna" target="_blank">Twitter</a></li>
+      <li><a href="https://www.instagram.com/curlyswirly/" target="_blank">Instagram</a></li>
+    </ul>
+  </nav>
 </div>
+  <div class="wrapper">
+    <div class="main">
+      <a href="mailto:calli.luna@gmail.com">
+          <img src="IMG_6865.jpg" alt="Self Portrait" width="100" />
+      </a>
+      <p>Hello, my name is Calli. This is a site to learn and little bit about me!</p>
+    </div>
 
+    <aside>
+      <h2>Video</h2>
+      <h3>Here</h3>
+      <h2>Audio</h2>
+      <h3>Here</h3>
+      <h2>Photo</h2>
+      <h3>Here</h3>
+      <h2>Text</h2>
+      <h3>Here</h3>
+    </aside>
+  </div>
 </body>
 
 </html>
