--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
      <meta http-equiv="content-type" content="text/html;charset=utf-8" />
      <link rel="stylesheet" type="text/css" href="style.css" />
      <link href="https://fonts.googleapis.com/css?family=BioRhyme|Lato|Montserrat" rel="stylesheet"/>
+     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+     <script src="menu.js" type="text/javascript"></script>
 </head>
 
 <body>
   <div class="head">
     <h1>Calli Luna</h1>
   <nav>
+    <a class="menu-trigger" href="#">&#9776;</a>
     <ul class="nav">
       <li><a href="https://callitraveldiaries.wordpress.com/" target="_blank">Blog</a></li>
       <li><a href="http://calliluna.com/" target="_blank">Portfolio</a></li>
