--- a/index.html
+++ b/index.html
@@ -25,24 +25,22 @@
       <li><a href="https://www.instagram.com/curlyswirly/" target="_blank">Instagram</a></li>
     </ul>
   </nav>
+
 </div>
   <div class="wrapper">
     <div class="main">
       <a href="mailto:calli.luna@gmail.com">
-          <img src="IMG_6865.jpg" alt="Self Portrait" width="100" />
+          <img src="IMG_6865.jpg" alt="Self Portrait" width="100" height="100"/>
       </a>
       <p>Hello, my name is Calli. This is a site to learn and little bit about me!</p>
     </div>
 
     <aside>
-      <h2>Video</h2>
-      <h3>Here</h3>
-      <h2>Audio</h2>
-      <h3>Here</h3>
-      <h2>Photo</h2>
-      <h3>Here</h3>
-      <h2>Text</h2>
-      <h3>Here</h3>
+      <h2>Missouri School of Journalism</h2>
+      <!-- This is the standard Google embed code  -->
+      <div class="map-wrapper">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3102.943476659729!2d-92.33039838504625!3d38.9481196515586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87dcb79505ed8739%3A0xced5b1cd6832a82e!2sMissouri+School+of+Journalism!5e0!3m2!1sen!2sus!4v1480631377543" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
     </aside>
   </div>
 </body>
