--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a href="mailto:calli.luna@gmail.com">
           <img src="IMG_6865.jpg" alt="Self Portrait" width="100" height="100"/>
       </a>
-      <p>Hello, my name is Calli. This is a site to learn and little bit about me!</p>
+      <p>Hello, my name is Calli. This is a site to learn and little bit about me! I am a journalism student at the University of Missouri.</p>
     </div>
 
     <aside>
@@ -41,6 +41,8 @@
       <div class="map-wrapper">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3102.943476659729!2d-92.33039838504625!3d38.9481196515586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87dcb79505ed8739%3A0xced5b1cd6832a82e!2sMissouri+School+of+Journalism!5e0!3m2!1sen!2sus!4v1480631377543" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
+      <h2>Photos</h2>
+      <h2>Videos</h2>
     </aside>
   </div>
 </body>
